{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 7,
  "lineage": "483b2816-7646-978a-66bb-dba6e0f25f6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275457221:internet-gateway/igw-01098b720bc711f48",
            "id": "igw-01098b720bc711f48",
            "owner_id": "739275457221",
            "tags": {
              "Name": "igw-terraform"
            },
            "tags_all": {
              "Name": "igw-terraform"
            },
            "vpc_id": "vpc-0240f537261c58782"
          },
          "dependencies": [
            "aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275457221:route-table/rtb-03c2979031331d2ec",
            "id": "rtb-03c2979031331d2ec",
            "owner_id": "739275457221",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01098b720bc711f48",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt-terraform",
              "Service": "terraform"
            },
            "tags_all": {
              "Name": "public-rt-terraform",
              "Service": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0240f537261c58782"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-terraform",
            "aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083b6955d671ced6f",
            "route_table_id": "rtb-03c2979031331d2ec",
            "subnet_id": "subnet-0944f21e609c3a89b"
          },
          "dependencies": [
            "aws_internet_gateway.igw-terraform",
            "aws_route_table.public-rt-terraform",
            "aws_subnet.public-subnet-terraform",
            "aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275457221:security-group/sg-0e696f2d4f8788aaa",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e696f2d4f8788aaa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "739275457221",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-0240f537261c58782"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275457221:subnet/subnet-0944f21e609c3a89b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0944f21e609c3a89b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "739275457221",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-terraform"
            },
            "tags_all": {
              "Name": "public-subnet-terraform"
            },
            "vpc_id": "vpc-0240f537261c58782"
          },
          "dependencies": [
            "aws_vpc.vpc-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:739275457221:vpc/vpc-0240f537261c58782",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05d37173bbb51a6ab",
            "default_route_table_id": "rtb-0d3a3991a1de5c14d",
            "default_security_group_id": "sg-0edf1d120d880782c",
            "dhcp_options_id": "dopt-01b2f3f9d0ea5e8ae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0240f537261c58782",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d3a3991a1de5c14d",
            "owner_id": "739275457221",
            "tags": {
              "Name": "vpc-terraform"
            },
            "tags_all": {
              "Name": "vpc-terraform"
            }
          }
        }
      ]
    }
  ]
}